fix profile gaps

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -27,7 +27,6 @@
 .profile__title {
     margin: 0;
     font-size: 42px;
-    line-height: 1.14;
     font-weight: 500;
     grid-area: title;
     text-overflow: ellipsis;
@@ -39,7 +38,6 @@
 .profile__description {
     margin: 0;
     font-size: 18px;
-    line-height: 1.2;
     font-weight: 400;
     grid-area: description;
     text-overflow: ellipsis;
@@ -98,13 +96,14 @@
         margin-left: 20px;
         font-size: 22px;
         line-height: 26.63px;
+        margin-left: 22px;
+        margin-bottom: 14px;
     }
 
     .profile__description {
         width: 282px;
         font-size: 14px;
         line-height: 22px;
-        margin-top: 14px;
         margin-bottom: 36px;
     }
 
